<resources>
    <string name="app_name">Final Year Project</string>
    <string name="Idname">Your ID</string>
    <string name="FACEBOOK_APP_ID">227746274319620</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">3e74274530e5a104fa40236e8f90e826</string>


    <string-array name="town_array">


        <item>Bin Qasim town</item>
        <item>Kimari Town</item>
        <item>korangi Town</item>
        <item>New Kalachi Town</item>
        <item>North Nazimabad Town</item>
        <item>Gadap Town</item>
        <item>Gulberg Town</item>
        <item>Gulshan Town</item>
        <item>Landhi Town</item>
        <item>Lyari Town</item>
        <item>Liaquatabad Town</item>
        <item>Orangi Town</item>
        <item>Jamshed Town</item>
        <item>Malir Town</item>
        <item>Saddar Town</item>
        <item>Shah Faisal Town</item>
        <item>SITE town</item>


    </string-array>
    <string name="loading">Loading </string>
    <string name="permissions_receive_sms_title">Read SMS Code</string>
     <string name="permissions_receive_sms_message">
        Grant permission to read your SMS code from your device to pre-fill.
    </string>
    <string name="permissions_read_phone_state_message">
        Grant permission to read your phone number from your device to pre-fill.
    </string>
    <string name="permissions_read_phone_state_title">Read Phone Number</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu_">Menu_Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="na">NA</string>
    <string name="title_activity_draw">DrawActivity</string>
    <string name="feedBack">Feed Us back</string>
    <string name="feedbackButton">Submit Your Feedback</string>
    <string name="option">Select Option</string>
    <string name="isComplainResolved">Is Your Complaint Resolved?</string>
    <string name="satisfied">Are you Satisfied With the Service Rendered?</string>
    <string name="satisfiedTwo">Are You Satisfied With the Quality of Service?</string>
    <string name="feedback1">Your Feedback</string>


</resources>