<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_feed_back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.hamza.finalyearproject1.FeedBack">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"


    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedBack"
        android:textSize="40sp"




        />




    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:layout_marginTop="30dp">



        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="10dp"
            android:hint="@string/isComplainResolved"
            android:id="@+id/resolved"
            android:imeActionId="5"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/satisfied"
            android:inputType="text"
            android:padding="10dp"
            android:layout_marginTop="4dp"
            android:id="@+id/serviceRend"
            android:imeActionId="5"
            />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="10dp"
            android:id="@+id/qualityService"
            android:layout_marginTop="4dp"
            android:hint="@string/satisfiedTwo"
            />


    </android.support.design.widget.TextInputLayout>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="2"
            android:padding="10dp"
            android:hint="@string/feedback1"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:id="@+id/feedbackk"
            android:scrollbars="vertical"
            />


    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedbackButton"
        android:textColor="#FFFFFF"
        android:layout_marginTop="40dp"
        />


</LinearLayout>

</LinearLayout>